name:                render
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/njsand/render#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Sandow
maintainer:          nick.sandow@gmail.com
copyright:           2017 Nick Sandow
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Raster
                     , Pbm
  build-depends:       base >= 4.7 && < 5
                     , array
  default-language:    Haskell2010

executable render
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , render
                     , array
                     , random
                     , safe
                     , vector
                     , JuicyPixels
  default-language:    Haskell2010

test-suite render-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , render
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/render
